--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.10",
     "@aws-sdk/client-s3": "^3.477.0",
     "@aws-sdk/lib-storage": "^3.477.0",
     "@aws-sdk/s3-request-presigner": "^3.477.0",
     "@aws-sdk/signature-v4-crt": "^3.474.0",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.2",
+    "mongodb": "^6.3.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
