--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "timeago-react": "^3.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
