--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.10",
+    "@auth/prisma-adapter": "^1.0.14",
     "@aws-sdk/client-s3": "^3.477.0",
     "@aws-sdk/lib-storage": "^3.477.0",
     "@aws-sdk/s3-request-presigner": "^3.477.0",
     "@aws-sdk/signature-v4-crt": "^3.474.0",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.2",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
+    "lucide-react": "^0.307.0",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.8",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-spinners": "^0.13.8",
     "timeago-react": "^3.0.6"
   },
