--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.2",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.307.0",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
@@ -29,6 +30,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-spinners": "^0.13.8",
     "timeago-react": "^3.0.6"
   },
