--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@aws-sdk/s3-request-presigner": "^3.477.0",
     "@aws-sdk/signature-v4-crt": "^3.474.0",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "lodash": "^4.17.21",
@@ -33,6 +36,8 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
     "react-spinners": "^0.13.8",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "timeago-react": "^3.0.6"
   },
   "devDependencies": {
