--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
     "react-spinners": "^0.13.8",
+    "react-timeago": "^7.2.0",
     "stripe": "^14.14.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
